添加大文件上传

--- a/前端积累/常用功能/01-大文件上传.md
+++ b/前端积累/常用功能/01-大文件上传.md
@@ -1,33 +1,1218 @@
 # 大文件上传
 
-最近做了一个需求，上传视频，最大不能超过300MB，可以上传多个，需要有成功，失败状态，还需要保证上传的速度。开始接到需求的时候，本能的想到就是已经一个文件丢过去得了，
+最近做了一个需求，上传视频，最大不能超过300MB，可以上传多个，需要有成功，失败状态，还需要保证上传的进度。开始接到需求的时候，本能的想到就是已经一个文件丢过去得了，
 但是大哥说不行，要分段上传，已经上传过的，不需要重复上传了。这时候就需要分片上传，分片上传减轻了上传的压力，也可以实现断点续传（是呀，上传过的不需要再传一遍了，这不就是续传了）
 
 ### 流程图
 
-![LOGO](/public/image/accumulation/fileUpload.png)
+![LOGO](/public/image/accumulation/spring-boot-chunk-upload-process.svg)
 
 
-### 获取 fileKey
+### 计算文件MD5 获取 fileKey
 
-获取文件的 `fileKey` 需要用到 `spark-md5`。但是这里有个细节，就是说，一个文件把它按照5M为基础切割的话，文件越大切出来的数量就越多，那么此时计算 `fileKey` 的时间就越长。
+获取文件的 `fileKey` 需要用到 `spark-md5`。有个细节，一个文件把它按照5M为基础切割的话，文件越大切出来的数量就越多，那么此时计算 `fileKey` 的时间就越长。
+采用的方式是，整个文件作为一个整个计算出一个对应的 hash 值，然后把这个 hash 值作为 `fileKey`。
+
+如果一个文件很大的话，整个文件都参与`fileKey` 的计算那么也会非常的耗时，需要用户等待的时间就比较长，采用如下的计算方式会比较快的得到 `fileKey`：
+
+1. <sapn class="marker-text">第一个和最后一个切片参与全部计算</sapn>
+2.  <sapn class="marker-text">中间的切片值计算前面两个字节，中间两个字节，最后两个字节</sapn>
+
+
+```javascript
+
+// 计算一个fileKey
+computeMd5(chunks) {
+  // 1.第一个和最后一个切片参与全部计算
+  // 2.中间的切片值计算前面两个字节，中间两个字节，最后两个字节
+  return new Promise((resolve) => {
+    const targets = []; // 存储所有参与计算的切片
+    const spark = new SparkMD5.ArrayBuffer();
+    const fileReader = new FileReader();
+    chunks.forEach((chunk, index) => {
+      if (index === 0 || index === chunks.length - 1) {
+        targets.push(chunk);
+      } else {
+        targets.push(chunk.slice(0, 2));
+        targets.push(chunk.slice(MaxChunkSize / 2, MaxChunkSize / 2 + 2));
+        targets.push(chunk.slice(MaxChunkSize - 2, MaxChunkSize));
+      }
+    });
+    fileReader.readAsArrayBuffer(new Blob(targets));
+    fileReader.onload = (e) => {
+      spark.append(e.target.result);
+      resolve(spark.end());
+    };
+  });
+}
+
+
+```
+
+### 获取是否有上传的任务存在
+
+在点击上传之前，需要根据文件的`MD5`检查下是否有上传任务
+
+::: code-group
+
+```javascript [点击文件上传]
+async handleHttpRequest(options) {
+  const file = options.file;
+  // 根据文件的MD5 查看服务器是否有任务
+  const task = await this.getTaskInfo(file);
+  console.log("有任务吗", task);
+  // 如果有上传任务那么执行上传
+  if (task) {
+    await this.uploadFile(file, task, options);
+  }
+}
+```
+
+```vue [文件上传模板]
+ <el-upload
+    ref="upload"
+    :before-upload="beforeUploadVideo"
+    :file-list="fileList"
+    :http-request="handleHttpRequest"
+    :show-file-list="false"
+    action="#"
+    class="el-upload-wrap videoUpload"
+    list-type="picture-card"
+>
+  <i slot="default" class="iconfont icon-S_shangchuan font-20"></i>
+  <p class="font-12 color-grey2">点击上传</p>
+</el-upload>
+
+```
+
+
+:::
+
+
+### 根据MD5查询文件
+
+根据 `MD5` 的值去服务端查询下是否有对应的文件，此时如果服务端有任务说明上传过了，只是没有上传完，那么需要继续上传，此时需要调用上传接口，继续上传。
+如果服务端没有任务，那么需要根据 `MD5` 创建一个上传任务。
+
+```javascript
+ // 检查服务端是否有对应的md5
+async getTaskInfo(file) {
+  try {
+    let task;
+    // 文件切片
+    const chunks = this.createChunks(file);
+    // 计算文件的MD5
+    const identifier = await this.computeMd5(chunks);
+    // 根据MD5 即 identifier 查看服务器是否有任务，有任务则返回任务信息
+    // 没有任务则创建一个上传任务
+    const resp = await this.videoGetTaskInfoFetch(identifier);
+    if (resp.returncode === 0) {
+      task = resp.result;
+      if (!task) {
+        // 服务器端没有对应的md5 创建分片上传
+        task = await this.videoCreateTask(identifier, file);
+      }
+      return task;
+    } else {
+      throw resp;
+    }
+  } catch (error) {
+    console.log("getTaskInfo-error:", error);
+    this.$message({
+      type: "error",
+      message: "视频上传失败，请重试",
+    });
+  }
+}
+
+
+```
+
+### 是否存在上传任务
+
+根据 `MD5` 的值获取服务端任务信息，存在任务的话，则返回具体任务信息。
+
+::: code-group
+```javascript [获取任务信息]
+
+async videoGetTaskInfoFetch(fileKey) {
+  if (!fileKey) {
+    return;
+  }
+  try {
+    const resp = await videoGetTaskInfo({
+      fileKey
+    });
+    return resp;
+  } catch (error) {
+    console.log(error);
+  }
+}
+
+```
+```json [任务信息]
+{
+    "message": "成功",
+    "result": {
+        "finished": false,
+        "path": "https://xxx/d2a5d32c-3b85-495f-8c2b-ba813c0e0ed6.mp4",
+        "taskRecord": {
+            "id": 307,
+            "uploadId": "2~ZCv5ETDjqHZWpOBa9XenUDBpRS12Y9Q",
+            "fileKey": "065129658539bfde8d5be55644f988ba",
+            "fileId": "d2a5d32c-3b85-495f-8c2b-ba813c0e0ed6",
+            "fileName": "多线程&JUC-30-自定义线程池超详细解析.mp4",
+            "filePath": "xxx/d2a5d32c-3b85-495f-8c2b-ba813c0e0ed6.mp4",
+            "bucket": "platform-video",
+            "totalSize": 174500798,
+            "chunkSize": 5242880,
+            "chunkNum": 34,
+            "dealerId": 1,
+            "exitPartList": [
+                {
+                    "partNumber": 1,
+                    "lastModified": 1742193209354,
+                    "size": 5242880,
+                    "etag": "dc096af20e1620a681b003649c4caa7a"
+                },
+                {
+                    "partNumber": 2,
+                    "lastModified": 1742193209829,
+                    "size": 5242880,
+                    "etag": "ef26a0c7044e931afb7f96ab296f1e05"
+                },
+                {
+                    "partNumber": 3,
+                    "lastModified": 1742193206527,
+                    "size": 5242880,
+                    "etag": "0d88be04c1ae4abed92fce9612a8c9d5"
+                },
+                {
+                    "partNumber": 4,
+                    "lastModified": 1742193211071,
+                    "size": 5242880,
+                    "etag": "560ffcd26b4a7630dbaf0618fabb03fe"
+                },
+                {
+                    "partNumber": 5,
+                    "lastModified": 1742193209779,
+                    "size": 5242880,
+                    "etag": "3eced4850b0e8fe8a99887ea3e7b1ba0"
+                },
+                {
+                    "partNumber": 6,
+                    "lastModified": 1742193206497,
+                    "size": 5242880,
+                    "etag": "a5bce6be3f68bd6122bf8126f71f3f03"
+                },
+                {
+                    "partNumber": 8,
+                    "lastModified": 1742193224700,
+                    "size": 5242880,
+                    "etag": "207a7ef8c93d1e34b53aa9db001a927b"
+                },
+                {
+                    "partNumber": 10,
+                    "lastModified": 1742193225862,
+                    "size": 5242880,
+                    "etag": "4a764e50ae66b68b0abb8ff332c5c4a8"
+                },
+                {
+                    "partNumber": 11,
+                    "lastModified": 1742193225426,
+                    "size": 5242880,
+                    "etag": "d63e960dd968c214f59acd0b69bc7b54"
+                }
+            ]
+        }
+    },
+    "returncode": 0
+}
+
+```
+:::
+
+### 没有任务创建一个上传任务
+
+::: code-group
+
+```javascript [创建上传任务]
+// 创建上传任务
+async videoCreateTask(identifier, file) {
+  try {
+    const initTaskData = {
+      chunkSize: MaxChunkSize,
+      fileKey: identifier,
+      fileName: file.name,
+      totalSize: file.size,
+    };
+    const resp = await videoCreateTask(initTaskData);
+    if (resp.returncode === 0) {
+      return resp.result;
+    } else {
+      throw resp;
+    }
+  } catch (error) {
+    console.log("videoCreateTask-error:", error);
+    this.$message({
+      type: "error",
+      message: error.message || "文件上传失败，请重试",
+    });
+  }
+},
+```
+
+
+```json [创建上传任务数据]
+{
+    "message": "成功",
+    "result": {
+        "finished": false,
+        "path": "https://xxx/aef23c02-7dce-4b0b-8cec-bc6ecb75d450.mp4",
+        "taskRecord": {
+            "id": 308,
+            "uploadId": "2~3GIWaKGPMrKnwbrxG6nC9Jmc3uXk-iC",
+            "fileKey": "48cec540243692cc191dffeb940458f0",
+            "fileId": "aef23c02-7dce-4b0b-8cec-bc6ecb75d450",
+            "fileName": "多线程&JUC-29-线程池.mp4",
+            "filePath": "xxx/aef23c02-7dce-4b0b-8cec-bc6ecb75d450.mp4",
+            "bucket": "platform-video",
+            "totalSize": 100195486,
+            "chunkSize": 5242880,
+            "chunkNum": 20,
+            "dealerId": 1,
+            "exitPartList": []
+        }
+    },
+    "returncode": 0
+}
+
+```
+:::
+
+### 文件切片
+把文件切片是为了方便计算文件的MD5，如果不切片直接计算的话，会比较耗时，切片后，取第一个和最后一个切片，在加上中间的切片的值。
+这样计算文件的MD5会很快。
+
+```javascript
+createChunks(file) {
+  // 文件分片 操作
+  let cur = 0;
+  let chunks = [];
+  while (cur < file.size) {
+    const blob = file.slice(cur, cur + MaxChunkSize);
+    chunks.push(blob);
+    cur += MaxChunkSize;
+  }
+  this.filesAllChunks = chunks;
+  console.log("文件切片后的数量-filesAllChunks，", chunks);
+  return chunks;
+}
+```
+
+到目前为止，所有的准备工作都已经做好了，就差上传以及上传成功后的文件合并了。
+
+### 文件上传
+
+文件上传的时候，需要考虑一下几个问题
+- 浏览器的并发最大是6，每次上传最大数量是6
+- 上传过的就不要再上传了，过滤掉上传过的文件
+- 上传完成后，但是没有合并过（可能之前上传过），需要调用合并文件接口
+- 上传成功了，也合并文件过文件，直接将文件状态标注为完成
+- 分片上传过程中，成功了需要更新上传进度，失败后则提示用户重新上传
+
+
+```javascript
+ async uploadFile(file, task, options) {
+  const CancelToken = axios.CancelToken;
+  const source = CancelToken.source();
+  const { finished, path, taskRecord } = task;
+  const {
+    fileKey,
+    fileId,
+    exitPartList,
+    chunkNum,
+    chunkSize
+  } = taskRecord;
+
+  const beforeUploadFile = {
+    uid: file.uid,
+    fileKey,
+    fileId,
+    fileName: file.name,
+    fileSize: file.size,
+    totalProgress: finished ? 100 : 0,
+    finished: finished ? true : false,
+    uploadedError: false,
+    jobStatus: -1,
+  };
+
+  this.hasError = false;
+  // beforeUploadingDisplayData 存储着上传的视频的数据
+  // 是个数组，可以上传多个
+  const existingFileIndex = this.beforeUploadingDisplayData.findIndex(
+    (item) => item.fileKey === fileKey
+  );
+  // 如果有这个文件，就更新数据，没有就添加
+  if (existingFileIndex !== -1) {
+    this.$set(
+      this.beforeUploadingDisplayData,
+      existingFileIndex,
+      beforeUploadFile
+    );
+  } else {
+    this.beforeUploadingDisplayData.push(beforeUploadFile);
+  }
+
+  console.log(
+    "beforeUploadingDisplayData:",
+    this.beforeUploadingDisplayData
+  );
+  // 根据接口的返回 获取已经上传过的切片 数量
+  const uploadedChunks = exitPartList ? exitPartList.length : 0;
+  
+  // 初始数据  fileUid 对象里 存在所有上传的信息以及上传的状态和进度
+  this.$set(this.fileUid, fileKey, {
+    fileKey,
+    fileId,
+    fileName: file.name,
+    currentChunk: finished ? chunkNum : 0, // 当前块
+    totalChunks: chunkNum || 0, // 总块数
+    totalProgress: finished
+      ? 100
+      : Math.round((uploadedChunks / chunkNum) * 100), // 进度
+    pollingInterval: null,
+    finished: false,
+    uploadedError: false,
+    jobStatus: -1, // 默认给个-1
+    cancel: source.cancel,
+  });
+
+  // 根据任务信息判断 是否上传完了
+  if (finished) {
+    console.log("上传过，并且还合并过---222", finished);
+    // 上传完毕了
+    console.log(
+      "beforeUploadingDisplayData-finished完毕",
+      this.beforeUploadingDisplayData
+    );
+    console.log("finished", this.fileUid[fileKey]);
+    // 根据 fileKey 更新fileUid 数据里的状态
+    setTimeout(() => {
+      this.$set(this.fileUid[fileKey], "finished", finished);
+      this.$set(this.fileUid[fileKey], "path", path);
+    }, 300);
+    // 给父组件同步数据
+    this.emitVideoList();
+    return;
+  }
+  // 将所有的切片重新组装
+  const fileAllChunksData = this.filesAllChunks.map((chunk, partNumber) => {
+    const start = Number(chunkSize) * partNumber;
+    // 假如分 3片  15M的话
+    // partNumber 0 :
+    // start 0   => 上传参数第 1块 
+    // chunk: 5M  从 chunkOffset0开始 5M 结束
+    
+    // partNumber 1 :
+    // start 5M  => 上传参数 第 2块 
+    // chunk: 5M 从 chunkOffset5M开始 10M结束
+    
+    // partNumber 2 :
+    // start 10M => 上传参数 第 3块 
+    // chunk: 5M 从 chunkOffset10M开始15M结束
+    return {
+      fileKey,
+      chunkHash: `${fileKey}-${partNumber}`,
+      file: chunk,
+      partNumber: partNumber + 1, // 从1开始而不是0  传给后端的是索引
+      chunkOffset: start, // 这里计算的是切片的偏移量
+      chunkSize: chunk.size,
+      fileName: file.name,
+      cancelToken: source.token,
+    };
+  });
+  console.log(
+    "fileAllChunksData：",
+    fileAllChunksData,
+    JSON.stringify(fileAllChunksData)
+  );
+
+  // 要上传的数据 这个数据是用来对比是否上传成功的
+  const successfulUploads = [];
+  // 存放待上传的数据，如果没上传过那么就是fileAllChunksData
+  // 上传过那么就是 fileAllChunksData里面过滤出来没传过的
+  let uploadTaskParams = [];
+  
+  // 找出已经上传过的 就不要再上传了
+  if (exitPartList && exitPartList.length > 0) {
+    console.log("exitPartList:", exitPartList);
+    // 接口返回了 已经上传的部分，存在了 exitPartList里
+    // 根据切片的索引 partNumber 把上传过的找出来
+    const exitPartListData = fileAllChunksData.filter((chunk) =>
+      exitPartList.some(
+        (exitPart) => exitPart.partNumber === chunk.partNumber
+      )
+    );
+    exitPartListData.forEach((chunk) => {
+      successfulUploads.push(chunk.chunkHash);
+    });
+    console.log("successfulUploads已经存在的:", successfulUploads);
+    // 此时要判断是否存在有已经上传的
+    uploadTaskParams = fileAllChunksData.filter(
+      (chunk) =>
+        !exitPartList.some(
+          (exitPart) => exitPart.partNumber === chunk.partNumber
+        )
+    );
+  } else {
+    uploadTaskParams = fileAllChunksData;
+  }
+  console.log("uploadTaskParams:", uploadTaskParams);
+  if (!uploadTaskParams.length && !finished) {
+    console.log("之前上传过了，但是呢没合并，所以合并吧");
+    //   说明之前上传过了，那么就开始合并吧
+    await this.handleMergeVideo(fileKey);
+    return;
+  }
+
+  // 最大并发数为6
+  const batchSize = 6;
+  const chunkedUploadParams = this.chunkArray(uploadTaskParams, batchSize);
+  console.log("chunkedUploadParams:", chunkedUploadParams);
+  // 6个一组进行上传，传完6个在来6个
+  for (let i = 0; i < chunkedUploadParams.length; i++) {
+    // 如果出现错误，不再继续处理后续的批次
+    if (this.hasError) {
+      break;
+    }
+
+    const tasks = chunkedUploadParams[i].map((params, currentTaskIndex) => {
+      return videoUploadTask(params, {
+        timeout: 300000, // 这个时间设置大一些，别整的全超时了
+        cancelToken: params.cancelToken,
+      })
+        .then((res) => {
+          if (res.returncode === 0) {
+            this.fileUid[fileKey].currentChunk++;
+            const totalUploadedChunks =
+              uploadedChunks + this.fileUid[fileKey].currentChunk;
+            // 计算上传进度
+            const totalProgress = Math.round(
+              (totalUploadedChunks / chunkNum) * 100
+            );
+            if (totalProgress > this.fileUid[fileKey].totalProgress) {
+              this.$set(
+                this.fileUid[fileKey],
+                "totalProgress",
+                totalProgress
+              );
+            }
+            console.log(
+              `
+              Upload success for chunk 
+              ${currentTaskIndex}--第几个片段--
+              ${params.partNumber}-${params.fileName}
+              `
+            );
+            // 存放 上传成功的切片
+            successfulUploads.push(params.chunkHash);
+            this.emitVideoList();
+          } else {
+            throw res;
+          }
+        })
+        .catch((err) => {
+          console.log("单个报错哦--", err);
+          // 把当前失败状态修改成错误
+          console.log(
+            `
+            Upload failed for chunk 
+            ${currentTaskIndex}--第几个片段--
+            ${params.partNumber}-${params.fileName}`
+          );
+          console.log("Upload failed----chunk", this.fileUid[fileKey]);
+          console.log(
+            "upload failed----chunk",
+            this.beforeUploadingDisplayData
+          );
+          
+          this.$set(this.fileUid[fileKey], "uploadedError", true);
+          
+          const existingFileIndex =
+            this.beforeUploadingDisplayData.findIndex(
+              (item) => item.fileKey === fileKey
+            );
+          if (existingFileIndex !== -1) {
+            this.$set(
+              this.beforeUploadingDisplayData[existingFileIndex],
+              "uploadedError",
+              true
+            );
+          }
+          console.log("Upload failed----", this.fileUid[fileKey]);
+          console.log("upload failed----", this.beforeUploadingDisplayData);
+
+          if (axios.isCancel(err)) {
+            console.log("Upload canceled:", err.message);
+          }
+          this.hasError = true;
+          throw err;
+        });
+    });
+    
+    try {
+      console.log("所有的任务tasks----", tasks);
+      this.emitVideoList();
+      await Promise.all(tasks);
+    } catch (error) {
+      console.log("Upload process terminated due to errors", error);
+      if (this.hasError) {
+        this.$message({
+          type: "error",
+          message: "视频上传失败，请重新上传",
+        });
+        return;
+      }
+    }
+  }
+
+  console.log("successfulUploads---", successfulUploads);
+  if (
+    !this.hasError &&
+    successfulUploads.length === this.fileUid[fileKey].totalChunks
+  ) {
+    console.log("All uploads completed");
+    this.$message({
+      type: "success",
+      message: "所有视频片段上传成功！",
+    });
+    this.emitVideoList();
+    // 合并视频
+    await this.handleMergeVideo(fileKey);
+  }
+}
+
+// 将任务分组 6个一组
+chunkArray(array, size) {
+  const result = [];
+  for (let i = 0; i < array.length; i += size) {
+    const chunk = array.slice(i, i + size);
+    result.push(chunk);
+  }
+  return result;
+}
+
+
+```
+
+### 文件合并
+
+::: code-group
+
+```javascript [文件合并调用]
+// 切片合并 合并成功后返回 对应文件的 id
+async handleMergeVideo(fileKey) {
+  try {
+    const resp = await videoFileMerge({
+      fileKey,
+    });
+    if (resp.returncode === 0) {
+      // 获取合并成功后的文件id
+      this.uploadVideoId = resp.result;
+      // 更新文件上传进度
+      this.$set(this.fileUid[fileKey], "totalProgress", 100);
+      this.$set(this.fileUid[fileKey], "fileId", resp.result);
+      
+      const existingFileIndex = this.beforeUploadingDisplayData.findIndex(
+        (item) => item.fileKey === fileKey
+      );
+      
+      if (existingFileIndex !== -1) {
+        this.$set(
+          this.beforeUploadingDisplayData[existingFileIndex],
+          "fileId",
+          resp.result
+        );
+      }
+      // 再次调用下 获取下任务信息接口，看看数据 ，更新对应文件的状态以及路径等数据
+      const taskInfoResp = await this.videoGetTaskInfoFetch(fileKey);
+      if (taskInfoResp.returncode === 0) {
+        const { finished, path, taskRecord } = taskInfoResp.result;
+        const { chunkNum } = taskRecord;
+        
+        this.$set(this.fileUid[fileKey], "finished", finished);
+        this.$set(this.fileUid[fileKey], "path", path);
+        this.$set(this.fileUid[fileKey], "currentChunk", chunkNum);
+        
+        if (existingFileIndex !== -1) {
+          this.$set(
+            this.beforeUploadingDisplayData[existingFileIndex],
+            "finished",
+            finished
+          );
+        }
+      }
+      console.log("合并成功后--在查看下任务---", taskInfoResp);
+      console.log("合并成功后----this.fileUid", this.fileUid);
+      console.log(
+        "合并成功后----数组beforeUploadingDisplayData",
+        this.beforeUploadingDisplayData
+      );
+      // 给父组件传递数据
+      this.emitVideoList();
+    } else {
+      throw resp;
+    }
+  } catch (error) {
+    this.$message({
+      type: "error",
+      message: error.message || "视频上传错误，请重试",
+    });
+  }
+}
+```
+
+```json [文件合并返回]
+{
+  "message":"成功",
+  "result":"d2a5d32c-3b85-495f-8c2b-ba813c0e0ed6",
+  "returncode":0
+}
+```
+:::
+
+### 模板文件
+
+::: code-group
+
+```vue [文件模板]
+<template>
+  <div>
+    <!--  上传列表数据  -->
+
+    <div
+        v-if="beforeUploadingDisplayData && beforeUploadingDisplayData.length"
+        class="el-upload-list el-upload-list--picture-card videoUpload fn-clear">
+      <div
+          v-for="item in beforeUploadingDisplayData"
+          class="el-upload-list__item is-success"
+      >
+        <el-image
+            :src="fileUid[item.fileKey].video_cover"
+            class="el-upload-list__item-thumbnail"
+            fit="contain"
+        >
+        </el-image>
+        <div class="el-upload-list__item-actions hideUploadList">
+          <p
+              class="el-upload-list__item-actions-item"
+              @click="handlePlayBtn(fileUid[item.fileKey])"
+          >
+            <i class="el-icon-video-play mr5"></i>
+            <span>播放</span>
+          </p>
+          <p
+              class="el-upload-list__item-actions-item"
+              @click="handleDeleteVideo(item.fileKey)"
+          >
+            <i class="el-icon-delete mr5"></i>
+            <span>删除</span>
+          </p>
+        </div>
+        <span
+            v-if="fileUid[item.fileKey].video_total_duration"
+            class="video-duration"
+        >{{ fileUid[item.fileKey].video_total_duration }}</span
+        >
+
+        <!--提示信息-->
+        <div
+            v-if="
+            fileUid[item.fileKey] &&
+            fileUid[item.fileKey].jobStatus !== jobStatus.success
+          "
+            class="icsCustom-videoShow-create"
+        >
+          <!--    正在上传中      -->
+          <div
+              v-if="
+              !fileUid[item.fileKey].finished &&
+              !fileUid[item.fileKey].uploadedError
+            "
+              class="icsCustom-videoShow-create-wrap"
+          >
+            <div style="position: relative; height: 40px">
+              <el-progress
+                  :percentage="
+                  fileUid[item.fileKey]
+                    ? fileUid[item.fileKey].totalProgress
+                    : item.totalProgress
+                "
+                  :stroke-width="3"
+                  :width="40"
+                  class="progress-item"
+                  color="white"
+                  define-back-colour="#666"
+                  text-color="#f60"
+                  type="circle"
+              ></el-progress>
+            </div>
+            <span>{{
+              promptStatement(fileUid[item.fileKey].totalProgress)
+            }}</span>
+            <p
+                style="
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                padding: 3px;
+                cursor: pointer;
+              "
+                @click="handleDeleteVideo(item.fileKey)"
+            >
+              <i class="el-icon-delete mr5" style="color: #fff"></i>
+            </p>
+          </div>
+
+          <!--   上传失败了       -->
+          <div
+              v-if="
+              !fileUid[item.fileKey].finished &&
+              fileUid[item.fileKey].uploadedError
+            "
+              class="icsCustom-videoShow-create-wrap"
+          >
+            <div class="tit">
+              <i class="el-icon-warning-outline font-22 vm mr4"></i>上传失败
+            </div>
+            <span v-if="!seriesId" class="btn" @click="handleUploadBtn"
+            >重新上传</span
+            >
+            <el-upload
+                v-else
+                :before-upload="beforeUploadVideo"
+                :file-list="fileList"
+                :http-request="handleHttpRequest"
+                :show-file-list="false"
+                action="#"
+            >
+              <span class="btn">重新上传</span>
+            </el-upload>
+            <p
+                style="
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                padding: 3px;
+                cursor: pointer;
+              "
+                @click="handleDeleteVideo(item.fileKey)"
+            >
+              <i class="el-icon-delete mr5" style="color: #fff"></i>
+            </p>
+          </div>
+
+          <!--    上传成功，进行切片      -->
+          <div
+              v-if="fileUid[item.fileKey].finished"
+              class="icsCustom-videoShow-create-wrap"
+          >
+            <template
+                v-if="fileUid[item.fileKey].jobStatus === jobStatus.failed"
+            >
+              <div style="margin-top: -3px">
+                <i class="el-icon-warning-outline" style="font-size: 30px"></i>
+                <div style="font-size: 12px; line-height: 1">切片失败</div>
+              </div>
+            </template>
+            <template
+                v-else-if="fileUid[item.fileKey].jobStatus !== jobStatus.success"
+            >
+              <i class="el-icon-loading" style="font-size: 30px"></i>
+              <div>切片中</div>
+            </template>
+            <p
+                style="
+                position: absolute;
+                bottom: -2px;
+                right: 0;
+                cursor: pointer;
+              "
+                @click="handleDeleteVideo(item.fileKey)"
+            >
+              <i class="el-icon-delete mr5" style="color: #fff"></i>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <el-upload
+        ref="upload"
+        :before-upload="beforeUploadVideo"
+        :file-list="fileList"
+        :http-request="handleHttpRequest"
+        :show-file-list="false"
+        action="#"
+        class="el-upload-wrap videoUpload"
+        list-type="picture-card"
+    >
+      <i slot="default" class="iconfont icon-S_shangchuan font-20"></i>
+      <p class="font-12 color-grey2">点击上传</p>
+    </el-upload>
+    
+  </div>
+</template>
+
+```
+
+```javascript [数据结构]
+const MaxChunkSize = 5 * 1024 * 1024; // 最大5M
+export default {
+  name: "VideoUpload",
+  data () {
+    return {
+      uploadedList: [],
+      fileList: [],
+      // TODO: 这个对象里存在所有的数据以及状态
+      // 上传的文件的uid合集，用于处理进度条与块数
+      fileUid: {
+        '8b1596dc609b211cd1486d066eea9edc': {
+          fileKey: '8b1596dc609b211cd1486d066eea9edc',
+          fileId: 'cee3abcb-077a-4ebf-93cc-054460c17de9',
+          currentChunk: 0, // 当前块
+          totalChunks: 0, // 总块数
+          totalProgress: 0, // 进度
+          pollingInterval: null, // 轮询
+          jobStatus: 3,
+          finished: false,
+          uploadedError: false,
+        }
+      }, 
+
+      /*
+      beforeUploadingDisplayData = [
+        {
+          fileId: 'e1fa1c82-2f60-4de7-a0a7-d3d5088a6339',
+          fileKey: 'c05cd92a0111bd8fb095efce414ce5df',
+          fileName: '11月27日-1.mp4',
+          fileSize: 79284582,
+          totalProgress: 0,
+          uid: 1734316824098
+        }
+       ]
+      */
+      // 已经上传后的视频列表
+      beforeUploadingDisplayData: [
+        {
+          fileId: 'e1fa1c82-2f60-4de7-a0a7-d3d5088a6339',
+          fileKey: '8b1596dc609b211cd1486d066eea9edc',
+          fileName: '11月27日-1.mp4',
+          fileSize: 79284582,
+          totalProgress: 0,
+          uid: 1734316824098,
+          jobStatus: 0,
+          finished: false,
+          uploadedError: false,
+          video_total_duration: 11.2
+        }
+      ], 
+      chunkSize: MaxChunkSize,
+      filesAllChunks: [], // 文件被切了多少片
+
+      hasError: false,
+      fileUploadChunkQueue: [],
+      jobStatus,
+      currentVideoJobStatus: jobStatus.failed,
+
+      videoFiles: {},
+      uploadVideoId: "",
+      progressFlag: false, // 上传进度
+    };
+  }
+}
+```
+:::
+
+
+
+### 处理文件切片和获取hash的几种尝试
+
+除了上面的计算整个文件的`MD5`的方式之外，可以给每个分片计算一个`MD5`
 
 ::: code-group
 
 ```javascript [for方式]
+export default {
+  methods: {
+    async handleHttpRequestFor(options) {
+      console.log("handleHttpRequest--", options);
+      const file = options.file;
+
+      console.time("切片-For");
+      // 获取对应的md5
+      const chunks = await this.cutFile(file);
+      console.timeEnd("切片-For");
+      console.log("chunks-for:", chunks);
+      console.time("切片-For-整个文件");
+      // 计算整个文件的hash
+      const fileHash = await this.computeFileHash(chunks);
+      console.log("整个文件的hash:", fileHash);
+      console.timeEnd("切片-For-整个文件");
+    },
+    async cutFile(file) {
+      // 变切割边计算
+      const chunkCount = Math.ceil(file.size / MaxChunkSize);
+      console.log("chunkCount-for:", chunkCount);
+      const result = [];
+      for (let i = 0; i < chunkCount; i++) {
+        const chunk = await this.createChunk(file, i, MaxChunkSize);
+        result.push(chunk);
+      }
+
+      return result;
+    },
+    createChunk(file, index, chunkSize) {
+      return new Promise((resolve) => {
+        const start = index * chunkSize;
+        const end = start + chunkSize;
+        const spark = new SparkMD5.ArrayBuffer();
+        const fileReader = new FileReader();
+        const blob = file.slice(start, end);
+        fileReader.onload = (e) => {
+          spark.append(e.target.result);
+          resolve({
+            start,
+            end,
+            index,
+            hash: spark.end(),
+            blob: blob,
+          });
+        };
+        fileReader.readAsArrayBuffer(blob);
+      });
+    },
+    // 新增方法：计算整个文件的hash
+    async computeFileHash(chunks) {
+      const spark = new SparkMD5.ArrayBuffer();
+      // 按顺序将所有分片的数据添加到spark中
+      for (const chunk of chunks) {
+        spark.append(chunk.blob);
+      }
+      // 计算整体的hash值
+      return spark.end();
+    },
+  }
+}
 ```
 
 ```javascript [webwork方式]
+export default {
+  methods: {
+    async handleHttpRequestWebWork(options) {
+      const file = options.file;
+
+      console.time("切片-webwork-切片并且计算hash");
+      // 获取对应的md5
+      const chunks = await this.cutFileWebWork(file);
+      console.timeEnd("切片-webwork-切片并且计算hash");
+      console.log("chunks:", chunks);
+    },
+    async cutFileWebWork(file) {
+      return new Promise((resolve, reject) => {
+        console.log("进入work前-1");
+        const THREAD_COUNT = navigator.hardwareConcurrency || 4;
+
+        const chunkCount = Math.ceil(file.size / MaxChunkSize);
+        const threadChunkCount = Math.ceil(chunkCount / THREAD_COUNT);
+        const result = [];
+        let finishCount = 0;
+
+        for (let i = 0; i < THREAD_COUNT; i++) {
+          const worker = new Worker("/myWorker.worker.js");
+
+          const start = i * threadChunkCount;
+          let end = (i + 1) * threadChunkCount;
+          if (end > chunkCount) {
+            end = chunkCount;
+          }
+          worker.addEventListener("message", (e) => {
+            result[i] = e.data;
+            worker.terminate();
+            finishCount++;
+            if (finishCount === THREAD_COUNT) {
+              resolve(result.flat());
+            }
+          });
+
+          worker.postMessage({
+            file,
+            start,
+            end,
+            CHUNK_SIZE: MaxChunkSize,
+          });
+        }
+      });
+    },
+  }
+}
+
+```
+
+```javascript [myWorker.worker.js]
+// TODO: 注意这个文件一定要放在根目录，能直接访问到才行
+const createChunk = (file, index, chunkSize) => {
+
+  return new Promise(resolve => {
+    const start = index * chunkSize
+    const end = start + chunkSize
+    const fileReader = new FileReader()
+    const blob = file.slice(start, end)
+    const spark = new SparkMD5.ArrayBuffer()
+    fileReader.onload = (e) => {
+      spark.append(e.target.result)
+      resolve({
+        start,
+        end,
+        index,
+        hash: spark.end(),
+        blob: blob,
+      })
+    }
+    fileReader.readAsArrayBuffer(blob)
+  })
+}
+
+self.addEventListener('message', async (e) => {
+
+  importScripts(`
+    https://cdn.jsdelivr.net/npm/spark-md5@3.0.0/spark-md5.min.js
+  `);
+
+  const {
+    file,
+    CHUNK_SIZE,
+    start,
+    end
+  } = e.data
+
+  const result = []
+  for (let i = start; i < end; i++) {
+    const prom = createChunk(file, i, CHUNK_SIZE)
+    result.push(prom)
+  }
+  const chunks = await Promise.all(result)
+
+  self.postMessage(chunks)
+
+})
+
 
 ```
 
 ```javascript [递归方式1]
+export default {
+  methods: {
+    async handleHttpRequestRecursion(options) {
+      console.log("handleHttpRequest--", options);
+
+      const file = options.file;
+      console.time("切片-递归1-切片并且计算hash");
+      const resultChunks = await this.computedMd5Re(file);
+      console.log(resultChunks);
+      console.timeEnd("切片-递归1-切片并且计算hash");
+    },
+    computedMd5Re(file) {
+      return new Promise((resolve, reject) => {
+        const chunkSize = MaxChunkSize;
+        const fileReader = new FileReader();
+        const md5 = new SparkMD5();
+        let index = 0;
+
+        fileReader.onload = (e) => {
+          md5.appendBinary(e.target.result);
+          if (index < file.size) {
+            index += chunkSize;
+            loadFile();
+          } else {
+            resolve(md5.end());
+          }
+        };
+
+        const loadFile = () => {
+          const slice = file.slice(index, index + chunkSize);
+          fileReader.readAsBinaryString(slice);
+        };
+
+        loadFile();
+      });
+    },
+  }
+}
 
 ```
 
 
 ```javascript [递归方式2]
+export default {
+  methods: {
+    async handleHttpRequestRecursion2(options) {
+      console.log("handleHttpRequest--", options);
 
+      const file = options.file;
+      console.time("切片-递归2-切片并且计算hash");
+      const resultChunks = await this.computedMd5Re2(file);
+      console.log(resultChunks);
+      console.timeEnd("切片-递归2-切片并且计算hash");
+    },
+    async computedMd5Re2(file, chunkSize = MaxChunkSize) {
+      return new Promise((resolve, reject) => {
+        const startMs = new Date().getTime();
+
+        let blobSlice =
+          File.prototype.slice ||
+          File.prototype.mozSlice ||
+          File.prototype.webkitSlice;
+
+        let chunks = Math.ceil(file.size / chunkSize);
+        let currentChunk = 0;
+        let spark = new SparkMD5.ArrayBuffer(); //追加数组缓冲区。
+        let fileReader = new FileReader(); //读取文件
+
+        fileReader.onload = function (e) {
+          spark.append(e.target.result);
+          currentChunk++;
+          if (currentChunk < chunks) {
+            loadNext();
+          } else {
+            //完成md5的计算，返回十六进制结果。
+            const md5 = spark.end(); 
+            console.log(
+              "文件md5计算结束，总耗时：",
+              (new Date().getTime() - startMs) / 1000,
+              "s"
+            );
+            resolve(md5);
+          }
+        };
+        fileReader.onerror = function (e) {
+          reject(e);
+        };
+
+        function loadNext() {
+          console.log("当前part number：", currentChunk, "总块数：", chunks);
+          let start = currentChunk * chunkSize;
+          let end = start + chunkSize;
+          end > file.size && (end = file.size);
+          fileReader.readAsArrayBuffer(blobSlice.call(file, start, end));
+        }
+
+        loadNext();
+      });
+    },
+  }
+}
 ```
 :::
 
