--- a/前端积累/常用功能/目录.md
+++ b/前端积累/常用功能/目录.md
@@ -1,3 +1,21 @@
 # 常用功能点
 
 
+## 待完成
+- 大文件分段上传
+
+- Form Generator 表单设计器使用总结
+  
+
+
+
+    https://github.com/JakHuang/form-generator?tab=readme-ov-file
+
+    https://v2.cn.vuejs.org/v2/guide/render-function.html
+    https://v2.cn.vuejs.org/v2/guide/render-function.html#%E8%8A%82%E7%82%B9%E3%80%81%E6%A0%91%E4%BB%A5%E5%8F%8A%E8%99%9A%E6%8B%9F-DOM
+
+    https://blog.csdn.net/weixin_44815800/category_12427112.html
+    https://gitee.com/starlight_day/form-generator/blob/dev/src/components/customer/Column.js
+    
+  
+    https://juejin.cn/post/7306706954679091236
