数据库基础

--- a/JAVA/01-JavaWeb基础/04-web后端基础/06-分层解耦.md
+++ b/JAVA/01-JavaWeb基础/04-web后端基础/06-分层解耦.md
@@ -289,12 +289,140 @@ public class UserDaoImpl implements UserDao {
 
 ## DI 详解
 
+依赖注入指的是应用程序在运行的时候,所依赖的资源需要容器为其提供,
+这个过程称之为依赖注入
+
+依赖注入，是指`IOC`容器要为应用程序去提供运行时所依赖的资源，而资源指的就是对象。
+入门程序案例中，我们使用了`@Autowired`这个注解，完成了依赖注入的操作，而这个Autowired翻译过来叫：`自动装配`。
+
+![LOGO](/public/image/javapublic/WX20250609-103354@2x.png)
+
+::: tip
+`@Autowired`注解，默认是按照类型进行自动装配的（去IOC容器中找某个类型的对象，然后完成注入操作）
+入门程序举例：在`EmpController`运行的时候，
+就要到IOC容器当中去查找`EmpService`这个类型的对象，
+而我们的IOC容器中刚好有一个`EmpService`这个类型的对象，
+所以就找到了这个类型的对象完成注入操作。
+:::
+
+::: code-group
+
+```java[属性注入]
+- 优点：代码简洁、方便快速开发。
+- 缺点：隐藏了类之间的依赖关系、可能会破坏类的封装性。
+@RestController
+public class UserController {
+
+  //方式一: 属性注入
+  @Autowired
+  private UserService userService;
+  
+}
+```
+
+```java[构造器注入]
+- 优点：能清晰地看到类的依赖关系、提高了代码的安全性。
+- 缺点：代码繁琐、如果构造参数过多，可能会导致构造函数臃肿。
+@RestController
+public class UserController {
+  //方式二: 构造器注入
+  private final UserService userService;
+  
+  @Autowired
+  public UserController(UserService userService) {
+    this.userService = userService;
+  }
+} 
+```
+```java[setter方法注入]
+- 优点：保持了类的封装性，依赖关系更清晰。
+- 缺点：需要额外编写setter方法，增加了代码量。
+
+@RestController
+public class UserController {
+  //方式三: setter方法注入
+  private UserService userService;
+  
+  @Autowired
+  public void setUserService(UserService userService) {
+    this.userService = userService;
+  }
+} 
+```
+
+:::
 
 
 
 
 
+## Autowired 注解
 
+`@Autowired `注解默认是按照`类型`进行的,那如果再IOC容器中存在多个相同类型的bean对象，会出现什么情况呢？
+
+在下面的例子中，我们准备了两个UserService的实现类，并且都交给了IOC容器管理。 代码如下：
+
+![LOGO](/public/image/javapublic/07aba447-eda3-4fe6-a4b3-54ba78c6783d.png)
+
+此时，我们启动项目会发现，控制台报错了：
+
+
+
+![LOGO](/public/image/javapublic/90c19dba-202b-42e2-8488-baa04120a60e.png)
+
+出现错误的原因呢，是因为在Spring的容器中，UserService这个类型的bean存在两个，框架不知道具体要注入哪个bean使用，所以就报错了。
+
+如何解决上述问题呢？Spring提供了以下几种解决方案：
+- @Primary
+- @Qualifier
+- @Resource
+
+
+::: code-group
+
+```java [Primary]
+@Primary
+@Service
+public class UserServiceImpl implements UserService {
+}
+```
+
+```java[Qualifier]
+指定当前要注入的bean对象。 
+在@Qualifier的value属性中，指定注入的bean的名称。 
+@Qualifier注解不能单独使用，必须配合@Autowired使用。
+
+@RestController
+public class UserController {
+
+    @Qualifier("userServiceImpl")
+    @Autowired
+    private UserService userService;
+}
+```
+
+```java[Resource]
+
+是按照bean的名称进行注入。通过name属性指定要注入的bean的名称。
+
+@RestController
+public class UserController {
+        
+    @Resource(name = "userServiceImpl")
+    private UserService userService;
+}
+```
+
+:::
+
+
+::: tip  `@Autowird` 与` @Resource`的区别
+- `@Autowired `是spring框架提供的注解，而`@Resource`是JDK提供的注解
+- `@Autowired` 默认是按照类型注入，而`@Resource`是按照名称注入
+
+:::
+
+![LOGO](/public/image/javapublic/WX20250609-112957@2x.png)
 
 
 
