添加html常见问题

--- a/JAVA/02-Java语法基础/02-核心语法和概念/055-面向对象.md
+++ b/JAVA/02-Java语法基础/02-核心语法和概念/055-面向对象.md
@@ -94,11 +94,73 @@ public class Student {
 
 ## this
 
+方法被谁调用,`this` 就指向谁,可以理解为当前对象的引用
 
 ## 封装
 
+- 是面向对象三大特征之一(`封装,继承,多态`)
+- 是面向对象编程语言对客观世界的模拟,客观世界里成员变量是隐藏在对象内部的,外界是无法直接操作的
+
+### 封装原则
+
+- 将类的某些信息隐藏起来,只对外提供必要的接口
+- 成员变量 `private`,提供对应的`getXXX()`和`setXXX()`方法
+
+### 封装的好处
+
+- 通过方法来控制成员变量的操作,提高了代码的安全性
+- 把代码用方法进行封装,提高了代码的复用性
+
 
 ## 构造方法
+
+本质上是一个特殊的成员方法,用于创建对象,`new 类名()`,借助构造方法的加载时机,
+完成赋值,即完成对象数据的初始化
+
+::: code-group
+
+```java [格式]
+public class 类名() {
+    // 构造方法体
+    修饰符 类名(参数) {
+        // 初始化成员变量
+        变量名 = 参数;
+    }
+}
+```
+
+```java [示例]
+public class Student {
+    // 属性(成员变量)
+    private String name;
+    private int age;
+    
+    // 构造方法
+    public Student() {
+        // 无参构造方法
+    }
+    public Student(String name, int age) {
+        // 初始化成员变量
+        this.name = name;
+        this.age = age;
+    }
+}
+```
+:::
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
