--- a/前端基础/设计模式/01-基础/04-原型模式.md
+++ b/前端基础/设计模式/01-基础/04-原型模式.md
@@ -15,8 +15,8 @@
 
 从设计模式的角度讲，原型模式是用于创建对象的一种模式，如果我们想要创建一个对象，一种方法是先指定它的类型，然后通过类来创建这个对象。原型模式选择了另外一种方式，我们不再关心对象的具体类型，而是找到一个对象，然后通过克隆来创建一个一模一样的对象。
 
-```js
-如果使用原型模式，我们只需要调用负责克隆的方法，便能完成同样的功能。
+```javascript
+如果使用原型模式,我们只需要调用负责克隆的方法，便能完成同样的功能。
 
 var Plane = function(){
   this.blood = 100;
